<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mini Magic</string>
    <string name="button_main_newGame">Start a New Game</string>
    <string name="button_main_startGame">Continue Game</string>
    <string name="button_main_signIn">Sign In to an Existing Account</string>
    <string name="button_main_settings">Settings</string>
    <string name="hint_signIn_username">Username</string>
    <string name="hint_signIn_password">Password</string>
    <string name="button_signIn_submit">Sign In</string>
    <string name="sign_in_instructions">Sign In Below</string>
    <string name="text_newGame_instructions">Please create an account below</string>
    <string name="hint_newGame_username">Username</string>
    <string name="hint_newGame_password">Password</string>
    <string name="hint_newGame_password2">Re-enter Password</string>
    <string name="button_newGame_createAccount">Create Account</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_new_game_screen">New Game Screen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game_activity">GameActivity</string>

</resources>