<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/button_main_newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_newGame"
        android:onClick="newGameScreen" />
    
    <Button
        android:id="@+id/button_main_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_signIn"
        android:onClick="signIn" />
    
    <Button 
        android:id="@+id/button_main_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_settings"
        android:onClick="settings" />
    
   <Button
       android:id="@+id/button_main_starGame"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button_main_startGame"
       android:onClick="startGame" />
    
</LinearLayout>