<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGameScreen" >

    <TextView
        android:id="@+id/text_newGame_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_newGame_instructions" />
    
    <EditText
        android:id="@+id/editText_newGame_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_newGame_instructions"
        android:hint="@string/hint_newGame_username" />
    
    <EditText
        android:id="@+id/editText_newGame_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_newGame_username"
        android:inputType="textPassword"
        android:hint="@string/hint_newGame_password" />
    
    <EditText
        android:id="@+id/editText_newGame_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_newGame_password"
        android:inputType="textPassword"
        android:hint="@string/hint_newGame_password2" />
    
    

</RelativeLayout>